k8s/content-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content-service
  template:
    metadata:
      labels:
        app: content-service
    spec:
      containers:
        - name: content-service
          image: netflix-clone/contentservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: content-service
spec:
  type: ClusterIP
  selector:
    app: content-service
  ports:
    - protocol: TCP
      port: 80        # Port that the service listens to within the cluster
      targetPort: 8000  # Port that container (pod) is listening on
