k8s/streaming-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streaming-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streaming-service
  template:
    metadata:
      labels:
        app: streaming-service
    spec:
      containers:
        - name: streaming-service
          image: netflix-clone/streamingservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: streaming-service
spec:
  selector:
    app: streaming-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
